--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>Static Website on AWS S3</h1>
   <p>Hosted using Amazon S3 and CloudFront</p>
   <p>Deployed by Kanishq Khannawaliya</p>
-  <p> “Deployed via CI/CD”</p>
+  <p> “Deployedd via CI/CD”</p>
 </body>
 </html>
 
